Update UI and script to load car wash pricing
Refactored index.html to improve headings and button labels, and updated script.js to fetch pricing data from the new API endpoint. Enhanced user feedback by displaying loading and error messages.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Car Wash API Demo</title>
+  <title>Car Wash Pricing Demo</title>
 </head>
 <body>
-  <h1>Car Wash Pricing Demo</h1>
-  <button id="test">Call API</button>
-  <pre id="output"></pre>
+  <h1>Car Wash Pricing Configuration</h1>
+
+  <button id="loadPricing">Load Pricing</button>
+
+  <pre id="output">Click the button to load pricing...</pre>
 
   <script src="script.js"></script>
 </body>
