--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Car Wash Demo</title>
+
+<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 <h1>Car Wash Price Calculator</h1>
@@ -20,6 +23,7 @@
 <button id="calculateBtn" disabled>Get Price</button>
 
 <h2 id="priceResult"></h2>
+<div id="priceBreakdown"></div>
 
 <script src="script.js"></script>
 </body>
