--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Car Wash Demo</title>
-
-<link rel="stylesheet" href="style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Car Wash Demo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Car Wash Price Calculator</h1>
+    <h1>Car Wash Price Calculator</h1>
 
-<label for="year">Year:</label>
-<select id="year"></select>
+    <form>
+        <label for="year">Year:</label>
+        <select id="year"></select>
 
-<label for="make">Make:</label>
-<select id="make" disabled></select>
+        <label for="make">Make:</label>
+        <select id="make" disabled></select>
 
-<label for="model">Model:</label>
-<select id="model" disabled></select>
+        <label for="model">Model:</label>
+        <select id="model" disabled></select>
 
-<button id="calculateBtn" disabled>Get Price</button>
+        <button id="calculateBtn" disabled>Get Price</button>
+    </form>
 
-<h2 id="priceResult"></h2>
-<div id="priceBreakdown"></div>
-
-<script src="script.js"></script>
+    <h2 id="priceResult"></h2>
+    <div id="priceBreakdown"></div>
 </body>
 </html>
