Display current pricing info on calculator page
Added a 'Current Pricing' section to index.html and implemented loadPricingInfo() in script.js to fetch and display base prices, feature fees, and condition fees from the API. This provides users with up-to-date pricing details directly on the calculator page.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Car Wash Price Calculator</h1>
 
+    <h2>Current Pricing</h2>
+    <div id="pricingInfo"></div>
+
     <label for="year">Year:</label>
     <select id="year"></select>
 
